<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="share_image_description">Иконка "поделиться"</string>
    <string name="support">Написать в поддержку</string>
    <string name="support_image_description">Иконка "поддержка"</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="user_agreement_image_description">Иконка "пользовательское соглашение"</string>
    <string name="back_button_description">Перейти на экран назад</string>
    <string name="practicum_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="target_email">denis@example.com</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="mail_client_not_found">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer</string>
</resources>