<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:contentDescription="@string/back_button_description"
            android:src="@drawable/arrow_back" />

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display"
            android:gravity="center_vertical"
            android:paddingStart="12sp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/SettingsListItemStyle"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/textView"
            style="@style/SettingsListTextStyle"
            android:text="@string/dark_theme" />

        <Space style="@style/SettingsListSpaceStyle" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="6dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <LinearLayout style="@style/SettingsListItemStyle">

        <TextView
            android:id="@+id/share"
            style="@style/SettingsListTextStyle"
            android:text="@string/share" />

        <Space
            style="@style/SettingsListSpaceStyle" />

        <ImageView
            android:id="@+id/share_icon"
            style="@style/SettingsListIconStyle"
            android:contentDescription="@string/share_image_description"
            app:srcCompat="@drawable/share" />

    </LinearLayout>

    <LinearLayout style="@style/SettingsListItemStyle">

        <TextView
            android:id="@+id/support"
            style="@style/SettingsListTextStyle"
            android:text="@string/support" />

        <Space
            style="@style/SettingsListSpaceStyle" />

        <ImageView
            android:id="@+id/support_icon"
            style="@style/SettingsListIconStyle"
            android:contentDescription="@string/support_image_description"
            app:srcCompat="@drawable/support" />
    </LinearLayout>

    <LinearLayout style="@style/SettingsListItemStyle">
        <TextView
            android:id="@+id/user_agreement"
            style="@style/SettingsListTextStyle"
            android:text="@string/user_agreement" />
        <Space
            style="@style/SettingsListSpaceStyle" />
        <ImageView
            android:id="@+id/user_agreement_icon"
            style="@style/SettingsListIconStyle"
            android:contentDescription="@string/user_agreement_image_description"
            app:srcCompat="@drawable/next" />

    </LinearLayout>
</LinearLayout>