<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3772E7"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display"
        android:gravity="start"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:paddingTop="10sp
"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_button"
            style="@style/MainPageButtonStyle"
            android:text="@string/search"
            app:icon="@drawable/search" />

        <Space style="@style/MainPageButtonSpaceStyle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/library_button"
            style="@style/MainPageButtonStyle"
            android:text="@string/library"
            app:icon="@drawable/lib" />

        <Space style="@style/MainPageButtonSpaceStyle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_button"
            style="@style/MainPageButtonStyle"
            android:text="@string/settings"
            app:icon="@drawable/settings" />

    </LinearLayout>
</LinearLayout>